--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <!-- Custom CSS -->
 </head>
   <body>
@@ -204,8 +206,8 @@
             <span data-aos="fade-up"></span>
           </div>
         </div>
-        <div class="row">
-          <div data-aos="fade-up" class="col-md-6 comment">
+        <div class="owl-carousel">
+          <div data-aos="fade-up" class="comment">
             <p data-aos="fade-up">Once upon a time all the Rivers combined to protest against the action of the Sea in making their waters salt. “When we come to you,” said they to the Sea.</p>
             <div data-aos="fade-up" class="commenter">
               <div data-aos="fade-up" class="commenter_img">
@@ -217,7 +219,79 @@
               </div>
             </div>
           </div>
-          <div data-aos="fade-up" class="col-md-6 comment">
+          <div data-aos="fade-up" class="comment">
+            <p data-aos="fade-up">A shoe is not only a design, but it's a part of your body language, the way you walk. The way you're going to move is quite dictated by your shoes.</p>
+            <div data-aos="fade-up" class="commenter">
+              <div data-aos="fade-up" class="commenter_img">
+                <img data-aos="fade-up" src="images/commenter2.png" class="img-fluid" alt="">
+              </div>
+              <div data-aos="fade-up" class="commenter_info">
+                <p data-aos="fade-up">John Doe</p>
+                <h6 data-aos="fade-up">CEO, THE RIVERS COMPANY</h6>
+              </div>
+            </div>
+          </div>
+          <div data-aos="fade-up" class="comment">
+            <p data-aos="fade-up">Once upon a time all the Rivers combined to protest against the action of the Sea in making their waters salt. “When we come to you,” said they to the Sea.</p>
+            <div data-aos="fade-up" class="commenter">
+              <div data-aos="fade-up" class="commenter_img">
+                <img data-aos="fade-up" src="images/commenter1.png" class="img-fluid" alt="">
+              </div>
+              <div data-aos="fade-up" class="commenter_info">
+                <p data-aos="fade-up">John Doe</p>
+                <h6 data-aos="fade-up">CEO, THE RIVERS COMPANY</h6>
+              </div>
+            </div>
+          </div>
+          <div data-aos="fade-up" class="comment">
+            <p data-aos="fade-up">Once upon a time all the Rivers combined to protest against the action of the Sea in making their waters salt. “When we come to you,” said they to the Sea.</p>
+            <div data-aos="fade-up" class="commenter">
+              <div data-aos="fade-up" class="commenter_img">
+                <img data-aos="fade-up" src="images/commenter1.png" class="img-fluid" alt="">
+              </div>
+              <div data-aos="fade-up" class="commenter_info">
+                <p data-aos="fade-up">John Doe</p>
+                <h6 data-aos="fade-up">CEO, THE RIVERS COMPANY</h6>
+              </div>
+            </div>
+          </div>
+          <div data-aos="fade-up" class="comment">
+            <p data-aos="fade-up">Once upon a time all the Rivers combined to protest against the action of the Sea in making their waters salt. “When we come to you,” said they to the Sea.</p>
+            <div data-aos="fade-up" class="commenter">
+              <div data-aos="fade-up" class="commenter_img">
+                <img data-aos="fade-up" src="images/commenter1.png" class="img-fluid" alt="">
+              </div>
+              <div data-aos="fade-up" class="commenter_info">
+                <p data-aos="fade-up">John Doe</p>
+                <h6 data-aos="fade-up">CEO, THE RIVERS COMPANY</h6>
+              </div>
+            </div>
+          </div>
+          <div data-aos="fade-up" class="comment">
+            <p data-aos="fade-up">Once upon a time all the Rivers combined to protest against the action of the Sea in making their waters salt. “When we come to you,” said they to the Sea.</p>
+            <div data-aos="fade-up" class="commenter">
+              <div data-aos="fade-up" class="commenter_img">
+                <img data-aos="fade-up" src="images/commenter1.png" class="img-fluid" alt="">
+              </div>
+              <div data-aos="fade-up" class="commenter_info">
+                <p data-aos="fade-up">John Doe</p>
+                <h6 data-aos="fade-up">CEO, THE RIVERS COMPANY</h6>
+              </div>
+            </div>
+          </div>
+          <div data-aos="fade-up" class="comment">
+            <p data-aos="fade-up">Once upon a time all the Rivers combined to protest against the action of the Sea in making their waters salt. “When we come to you,” said they to the Sea.</p>
+            <div data-aos="fade-up" class="commenter">
+              <div data-aos="fade-up" class="commenter_img">
+                <img data-aos="fade-up" src="images/commenter1.png" class="img-fluid" alt="">
+              </div>
+              <div data-aos="fade-up" class="commenter_info">
+                <p data-aos="fade-up">John Doe</p>
+                <h6 data-aos="fade-up">CEO, THE RIVERS COMPANY</h6>
+              </div>
+            </div>
+          </div>
+          <div data-aos="fade-up" class="comment">
             <p data-aos="fade-up">A shoe is not only a design, but it's a part of your body language, the way you walk. The way you're going to move is quite dictated by your shoes.</p>
             <div data-aos="fade-up" class="commenter">
               <div data-aos="fade-up" class="commenter_img">
@@ -389,7 +463,7 @@
     <!-- Section eight -->
 
     <section class="map">
-      <div class="container-fluid">
+      <div  class="container-fluid">
         <div class="row">
           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2170.7939944932255!2d90.40318055112705!3d23.789217635374005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1698014731177!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
@@ -421,6 +495,29 @@
     <script src="https://kit.fontawesome.com/c5349d0a3d.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script>
+        $(document).ready(function(){
+  $(".owl-carousel").owlCarousel({
+    items:2,
+    loop:true,
+    autoplay:true,
+    smartSpeed:1000,
+    autoplayHoverPause:true,
+    dots:true,
+    responsive : {
+    0 : {
+      items:1,
+    },
+    480 : {
+    },
+    768 : {
+    }
+}
+  });
+});
+    </script>
     <script>
       AOS.init();
     </script>
